build/log/idf_py_stderr_output_15944
Traceback (most recent call last):
  File "C:\Users\enriq\ESP-IDF\esp-idf-v5.0.2\tools\kconfig_new\confserver.py", line 324, in <module>
    main()
  File "C:\Users\enriq\ESP-IDF\esp-idf-v5.0.2\tools\kconfig_new\confserver.py", line 71, in main
    run_server(args.kconfig, args.config, args.sdkconfig_rename)
  File "C:\Users\enriq\ESP-IDF\esp-idf-v5.0.2\tools\kconfig_new\confserver.py", line 75, in run_server
    config = kconfiglib.Kconfig(kconfig)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\enriq\.espressif\python_env\idf5.0_py3.11_env\Lib\site-packages\kconfiglib.py", line 947, in __init__
    self._init(filename, warn, warn_to_stderr, encoding)
  File "C:\Users\enriq\.espressif\python_env\idf5.0_py3.11_env\Lib\site-packages\kconfiglib.py", line 1085, in _init
    self._parse_block(None, self.top_node, self.top_node).next = None
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\enriq\.espressif\python_env\idf5.0_py3.11_env\Lib\site-packages\kconfiglib.py", line 2989, in _parse_block
    prev = self._parse_block(None, parent, prev)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\enriq\.espressif\python_env\idf5.0_py3.11_env\Lib\site-packages\kconfiglib.py", line 2989, in _parse_block
    prev = self._parse_block(None, parent, prev)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\enriq\.espressif\python_env\idf5.0_py3.11_env\Lib\site-packages\kconfiglib.py", line 3028, in _parse_block
    self._parse_block(_T_ENDMENU, node, node)
  File "C:\Users\enriq\.espressif\python_env\idf5.0_py3.11_env\Lib\site-packages\kconfiglib.py", line 3028, in _parse_block
    self._parse_block(_T_ENDMENU, node, node)
  File "C:\Users\enriq\.espressif\python_env\idf5.0_py3.11_env\Lib\site-packages\kconfiglib.py", line 3008, in _parse_block
    self._parse_block(_T_ENDIF, node, node)
  File "C:\Users\enriq\.espressif\python_env\idf5.0_py3.11_env\Lib\site-packages\kconfiglib.py", line 3091, in _parse_block
    self._parse_error(
  File "C:\Users\enriq\.espressif\python_env\idf5.0_py3.11_env\Lib\site-packages\kconfiglib.py", line 3879, in _parse_error
    raise KconfigError("{}error: couldn't parse '{}': {}".format(
kconfiglib.KconfigError: C:/Users/enriq/eclipse-workspace/HoCoSys/main/Kconfig.projbuild:193: error: couldn't parse 'endmenu': no corresponding 'menu'
